# xiao-esp32c6-wifi-sensor

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.ci.matter  sdkconfig.ci.wifi  sdkconfig.ci.zigbee  sdkconfig.defaults
.github/: FUNDING.yml
.github/workflows/: build.yml  lint.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
3d/enclosure/: XIAO_ESP32C6_Enclosure.FCStd
3d/enclosure/stl/: core.stl  lock.stl  soc_bracket.stl  soc_holder.stl  wrapper.stl
assets/: SensorXIAO.fzz
ci/docker/: Dockerfile  entrypoint.sh
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  sensor_adc.c  sensor_adc.h  sensor_bme.c  sensor_bme.h  sensor_data.c  sensor_data.h  sensor_gpio.c  sensor_gpio.h  sensor_i2c.c  sensor_i2c.h  sensor_id.c  sensor_id.h  sensor_led.c  sensor_led.h  sensor_matter.cpp  sensor_matter.h  sensor_mqtt.c  sensor_mqtt.h  sensor_nvs.c  sensor_nvs.h  sensor_openthread.h  sensor_sgp.c  sensor_sgp.h  sensor_sleep.c  sensor_sleep.h  sensor_wifi.c  sensor_wifi.h  sensor_zb.c  sensor_zb.h
scripts/: device_monitor.py  install.py
